Création partielle de la classe carDriver

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -154,6 +154,12 @@
     <script src="scripts/app/admin/tracker/tracker.js"></script>
     <script src="scripts/app/admin/tracker/tracker.controller.js"></script>
     <script src="scripts/components/tracker/tracker.service.js"></script>
+    <script src="scripts/app/entities/carDriver/carDriver.js"></script>
+    <script src="scripts/app/entities/carDriver/carDriver.controller.js"></script>
+    <script src="scripts/app/entities/carDriver/carDriver-dialog.controller.js"></script>
+    <script src="scripts/app/entities/carDriver/carDriver-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/carDriver/carDriver-detail.controller.js"></script>
+    <script src="scripts/components/entities/carDriver/carDriver.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
